# DevBeacon

./: .gitignore  README.md  README.zh-CN.md
.github/workflows/: release.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/devbeacon/app/: BleFallback.kt  ConfigStore.kt  DirectReceiveService.kt  LampStateMachine.kt  LowPowerClient.kt  MainActivity.kt  Models.kt  NotificationHelper.kt  NotifyClientService.kt  PowerPolicy.kt  Protocol.kt  RuntimeStatusStore.kt  StatusBroadcaster.kt  StatusLampView.kt  StatusModels.kt  StatusStore.kt  UiModeStore.kt
android/app/src/main/java/com/notifyphone/app/: BleFallback.kt  ConfigStore.kt  DirectReceiveService.kt  LampStateMachine.kt  LowPowerClient.kt  MainActivity.kt  Models.kt  NotificationHelper.kt  NotifyClientService.kt  PowerPolicy.kt  Protocol.kt  RuntimeStatusStore.kt  StatusBroadcaster.kt  StatusLampView.kt  StatusModels.kt  StatusStore.kt  UiModeStore.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notify.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: android-power.md  protocol.md  testing.md
pc/: pyproject.toml  sitecustomize.py
pc/devbeacon/: __init__.py
pc/notifyphone/: __init__.py
pc/src/devbeacon/: ble.py  cli.py  config.py  direct.py  protocol.py  server.py
pc/src/notifyphone/: cli.py  config.py  protocol.py  queue.py  server.py
pc/tests/: test_cli.py  test_protocol.py  test_server_integration.py
